Am 16.12.2021 wurde 20200827-Cloud Formation hands-on nachgeholt

--- a/aws/class-notes/_Safak_AWS_Python_Handson/20200827-Cloud Formation/yaml-template-guile.yml
+++ b/aws/class-notes/_Safak_AWS_Python_Handson/20200827-Cloud Formation/yaml-template-guile.yml
@@ -1,7 +1,7 @@
 # Ozet: 2020-08-27
 
-#Infrastructure as a Code (IaaS)
-
+# Infrastructure as a Code (IaaS)
+# Yeni repoya eklendi.
 # CloudFormation icin template
 # cfn yazinca ana cati geliyor!!
 # cfn-lite dersek daha kisa halde getirir.
