--- a/aws/Class-Notes Kohort EU/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje 101-serdar hoca/cf-template2.yml
+++ b/aws/Class-Notes Kohort EU/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje 101-serdar hoca/cf-template2.yml
@@ -60,10 +60,10 @@ Resources:
             yum update -y
             yum install httpd -y
             cd /var/www/html/
-            wget https://raw.githubusercontent.com/safaksrd/aws-devops-new/main/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje%20101-serdar%20hoca/static-web/index.html
-            wget https://raw.githubusercontent.com/safaksrd/aws-devops-new/main/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje%20101-serdar%20hoca/static-web/cat0.jpg
-            wget https://raw.githubusercontent.com/safaksrd/aws-devops-new/main/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje%20101-serdar%20hoca/static-web/cat1.jpg
-            wget https://raw.githubusercontent.com/safaksrd/aws-devops-new/main/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje%20101-serdar%20hoca/static-web/cat2.jpg
+            wget https://raw.githubusercontent.com/safaksrd/aws-devops-2022/main/aws/Class-Notes%20Kohort%20EU/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje%20101-serdar%20hoca/static-web/index.html
+            wget https://raw.githubusercontent.com/safaksrd/aws-devops-2022/main/aws/Class-Notes%20Kohort%20EU/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje%20101-serdar%20hoca/static-web/cat0.jpg
+            wget https://raw.githubusercontent.com/safaksrd/aws-devops-2022/main/aws/Class-Notes%20Kohort%20EU/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje%20101-serdar%20hoca/static-web/cat1.jpg
+            wget https://raw.githubusercontent.com/safaksrd/aws-devops-2022/main/aws/Class-Notes%20Kohort%20EU/_Safak_AWS_Python_Handson/20200916-101-kittens-carousel-static-website-ec2/proje%20101-serdar%20hoca/static-web/cat2.jpg
             systemctl start httpd
             systemctl enable httpd
 Outputs:
