20201014-002-milliseconds-converter wurde nachgeholt

--- a/aws/Class-Notes-Kohort-EU/Safak_Notes/20200916-101-kittens-carousel-static-website-ec2/proje-101/cf-template1.yml
+++ b/aws/Class-Notes-Kohort-EU/Safak_Notes/20200916-101-kittens-carousel-static-website-ec2/proje-101/cf-template1.yml
@@ -8,7 +8,7 @@ Description: > # > ya da | ile altsatira gecip aciklama yapilabilir
   is downloaded from Github repository, then deployed on Apache Web Server.
 
 Resources:
-  cfn-sec-group:
+  LeonsSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Enable HTTP for Apache Web Server and SSH for Terminal
