--- a/aws/Class-Notes-Kohort-EU/Safak_Notes/20201014-002-milliseconds-converter/proje-002/cf_template_token.yaml
+++ b/aws/Class-Notes-Kohort-EU/Safak_Notes/20201014-002-milliseconds-converter/proje-002/cf_template_token.yaml
@@ -33,7 +33,7 @@ Resources:
       LaunchTemplateData: 
         ImageId: ami-0947d2ba12ee1ff75
         InstanceType: t2.micro
-        KeyName: serdar
+        KeyName: leon
         SecurityGroupIds: 
           - !GetAtt WebServerSecurityGroup.GroupId
         TagSpecifications:
@@ -48,8 +48,8 @@ Resources:
               yum update -y
               yum install python3 -y
               pip3 install flask
-              TOKEN="ef581cea771ae3832b9c80ab1476a3b9474ae86a"
-              FOLDER="https://$TOKEN@raw.githubusercontent.com/serdarcw/milliseconds_project/master/"
+              TOKEN="xxxxxxxx"
+              FOLDER="https://$TOKEN@xxxxxxxxxxx"
               curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L "$FOLDER"templates/index.html
               curl -s --create-dirs -o "/home/ec2-user/templates/result.html" -L "$FOLDER"templates/result.html
               curl -s --create-dirs -o "/home/ec2-user/app.py" -L "$FOLDER"app.py
