--- a/aws/Class-Notes-Kohort-EU/Safak_Notes/20201014-002-milliseconds-converter/proje-002/cf_template_v1_curl.yaml
+++ b/aws/Class-Notes-Kohort-EU/Safak_Notes/20201014-002-milliseconds-converter/proje-002/cf_template_v1_curl.yaml
@@ -1,18 +1,8 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: |
   Cloudformation template for milliseconds converter application. This app runs on application load balancer. In addition, it is observed by Autoscaling Group
-  
+
 Resources:
-  ALBSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription:  Enable HTTP for ALB
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
-  
   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -26,18 +16,29 @@ Resources:
           FromPort: 80
           ToPort: 80
           SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
+ # 80 portu icin Source Sec Group Id tanimladik. Disaridan web sayfasini talep eden User once ALB nin DNS ine ulasacak, ALB den gelen istekler, EC2 instance lara ulasabilecek, yani EC2 instance icindeki app.py yi calistiracak . ALB EC2 lari cepecevree saracak.
   
-  WebServerLaunchTemplate:
+  ALBSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription:  Enable HTTP for ALB
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+
+  WebServerLT:
     Type: AWS::EC2::LaunchTemplate
     Properties:
       LaunchTemplateData: 
-        ImageId: ami-0947d2ba12ee1ff75
+        ImageId: ami-033b95fb8079dc481
         InstanceType: t2.micro
         KeyName: leon
         SecurityGroupIds: 
           - !GetAtt WebServerSecurityGroup.GroupId
         TagSpecifications:
-          - ResourceType: instance
+          - ResourceType: instance # olusacak EC2 instance larin adlarini belirliyoruz
             Tags:
               - Key: Name
                 Value: !Sub Web Server of ${AWS::StackName} 
@@ -54,9 +55,7 @@ Resources:
               curl -s --create-dirs -o "/home/ec2-user/app.py" -L "$FOLDER"app.py
               python3 /home/ec2-user/app.py
 
-# curl -s ile baslayan kisimda mkdir ile dosya olusturup icine girmek yerine bu sekilde yaptik. Bunun icin bir baska yontem daha var. wget -P templates !!
-
-  WebServerTargetGroup:
+  WebServerTG:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
       Port: 80
@@ -86,7 +85,7 @@ Resources:
     Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       DefaultActions: #required
-        - TargetGroupArn: !Ref WebServerTargetGroup
+        - TargetGroupArn: !Ref WebServerTG
           Type: forward
       LoadBalancerArn: !Ref ApplicationLoadBalancer #required
       Port: 80 #required
@@ -101,12 +100,12 @@ Resources:
       HealthCheckGracePeriod: 90
       HealthCheckType: ELB
       LaunchTemplate: 
-        LaunchTemplateId: !Ref WebServerLaunchTemplate
-        Version: !GetAtt WebServerLaunchTemplate.LatestVersionNumber
+        LaunchTemplateId: !Ref WebServerLT
+        Version: !GetAtt WebServerLT.LatestVersionNumber
       MaxSize: 3 #required
       MinSize: 1 #required
       TargetGroupARNs:
-        - !Ref WebServerTargetGroup
+        - !Ref WebServerTG
     
 
 Outputs:
