--- a/aws/Class-Notes-Kohort-EU/Safak_Notes/20201021-004-phonebook-web-application/phonebook-app_token.yml
+++ b/aws/Class-Notes-Kohort-EU/Safak_Notes/20201021-004-phonebook-web-application/phonebook-app_token.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: |
   CloudFormation Template for Phonebook Application. This template creates Application Load Balancer 
-  with Auto Scaling Group of Amazon Linux 2 (ami-0947d2ba12ee1ff75) EC2 Instances which host Python Flask Web Application.
+  with Auto Scaling Group of Amazon Linux 2 (xxxxxxxxxxxx) EC2 Instances which host Python Flask Web Application.
   EC2 instances are placed within WebServerSecurityGroup which allows http (80) connections only from ALBSecurityGroup,
   and allows tcp(3306) connections only within itself. RDS DB instance is placed within WebServerSecurityGroup so that
   Database Server can communicate with Web Servers.
@@ -9,7 +9,6 @@ Description: |
   WebServerASG Auto Scaling Group is using the WebServerLT Launch Template in order to spin up instances needed.
   WebServerLT Launch Template is configured to prepare Python Flask environment on EC2,
   and to deploy Phonebook Application on Flask Server after downloading the app code from Github repository.
-  
  
 Resources:
   WebServerSecurityGroup:
@@ -17,14 +16,15 @@ Resources:
     Properties:
       GroupDescription: Enable HTTP for Flask Web Server and Ssh for entering to EC2
       SecurityGroupIngress:
-         - IpProtocol: tcp
-           FromPort: 22
-           ToPort: 22
-           CidrIp: 0.0.0.0/0
-         - IpProtocol: tcp
-           FromPort: 80
-           ToPort: 80
-           SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          SourceSecurityGroupId: !GetAtt ALBSecurityGroup.GroupId
+# 80 portu icin Source Sec Group Id tanimladik. Disaridan web sayfasini talep eden User once ALB nin DNS ine ulasacak, ALB den gelen istekler, EC2 instance lara ulasabilecek, yani EC2 instance icindeki app.py yi calistiracak . ALB EC2 lari cepecevree saracak.
 
   ALBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
@@ -39,14 +39,14 @@ Resources:
   WebServerLT:
     Type: AWS::EC2::LaunchTemplate
     Properties:
-      LaunchTemplateData: 
-        ImageId: ami-0947d2ba12ee1ff75
+      LaunchTemplateData: # extension Launch Template Data yi otomatik getirmiyor, AWS documentation dan cekiyoruz
+        ImageId: ami-033b95fb8079dc481
         InstanceType: t2.micro
-        KeyName: serdar
+        KeyName: leon
         SecurityGroupIds: 
           - !GetAtt WebServerSecurityGroup.GroupId
         TagSpecifications: 
-          - ResourceType: instance
+          - ResourceType: instance # olusacak EC2 instance larin adlarini belirliyoruz
             Tags:
               - Key: Name
                 Value: !Sub Web Server of ${AWS::StackName} Stack
@@ -60,7 +60,7 @@ Resources:
                 pip3 install flask
                 pip3 install flask_mysql
                 echo "${MyDBURI}" > /home/ec2-user/dbserver.endpoint
-                TOKEN="94eddca57871d6cbcb24babb5e0ff31f30226804"
+                TOKEN="xxxxxxxxxxxxxxx!!!!!!!!!!!!!"
                 FOLDER="https://$TOKEN@raw.githubusercontent.com/serdarcw/004-Phonebook-web-app-EU/master/"
                 curl -s --create-dirs -o "/home/ec2-user/templates/index.html" -L "$FOLDER"templates/index.html
                 curl -s --create-dirs -o "/home/ec2-user/templates/add-update.html" -L "$FOLDER"templates/add-update.html
@@ -68,7 +68,9 @@ Resources:
                 curl -s --create-dirs -o "/home/ec2-user/app.py" -L "$FOLDER"phonebook-app.py
                 python3 /home/ec2-user/app.py
               - MyDBURI: !GetAtt MyDatabaseServer.Endpoint.Address
-
+# Database Server in Endpoint Address bilgisini MyDBURI degiskenine atariz
+# Userdatanin icindeki echo ile baslayan kisimda MyDBURI degiskenine atanmis bilgiyi phonebook.app.py de beklenen yere yaziyoruz.
+  
   WebServerTG:
     Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
