20201021-004-phonebook-web-application Hands-on wurde nachgeholt

--- a/aws/Class-Notes-Kohort-EU/Safak_Notes/20201014-002-milliseconds-converter/proje-002/cf_template_v2_wget.yaml
+++ b/aws/Class-Notes-Kohort-EU/Safak_Notes/20201014-002-milliseconds-converter/proje-002/cf_template_v2_wget.yaml
@@ -86,7 +86,7 @@ Resources:
     Properties:
       DefaultActions: #required
         - TargetGroupArn: !Ref WebServerTG
-          Type: forward
+          Type: forward # neden?
       LoadBalancerArn: !Ref ApplicationLoadBalancer #required
       Port: 80 #required
       Protocol: HTTP #required
@@ -95,7 +95,7 @@ Resources:
     Type: "AWS::AutoScaling::AutoScalingGroup"
     Properties:
       AvailabilityZones:
-        !GetAZs ""
+        !GetAZs "" # tüm AZ leri almasi icin
       DesiredCapacity: 2
       HealthCheckGracePeriod: 90
       HealthCheckType: ELB
