20201021-004-phonebook-web-application Hands-on wurde nachgeholt

--- a/aws/Class-Notes-Kohort-EU/Safak_Notes/20201021-004-phonebook-web-application/phonebook-app_v1_curl.yml
+++ b/aws/Class-Notes-Kohort-EU/Safak_Notes/20201021-004-phonebook-web-application/phonebook-app_v1_curl.yml
@@ -138,7 +138,7 @@ Resources:
       AllowMajorVersionUpgrade: false 
       AutoMinorVersionUpgrade: true
       BackupRetentionPeriod: 0
-      DBInstanceIdentifier: phonebook-app-db2 # burada da hata almistik, hey gidi gunler
+      DBInstanceIdentifier: phonebook-app-db # burada da hata almistik, hey gidi gunler
       DBName: phonebook
       DBSecurityGroups: 
         - !Ref MyDBSecurityGroup
