--- a/aws/Class-Notes-Kohort-EU/Safak_Notes/20200906-EC2 Volumes/nginex.yml
+++ b/aws/Class-Notes-Kohort-EU/Safak_Notes/20200906-EC2 Volumes/nginex.yml
@@ -1,4 +1,4 @@
-# E2033 - Barış  Template oluşturma, Volume oluşturma ve Mount etme, 
+# Template oluşturma, Volume oluşturma ve Mount etme, 
 # Linux komutları kullanarak bu Hard Disk i hazır hale getirme konularını öğrendik.
 # Bu öğrendiğimiz konuların CloudFormation da uygulanması için son yaptığımız 
 # KEN Nginex çalışmasını baz alarak bir YML dosyası oluşturdum.
@@ -7,6 +7,7 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: This template creates an EC2 instance to run a static website application deployed with Nginex Web Server
    
 Resources:
+
   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -24,23 +25,19 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
-
-  SSD2GB:
-    Type: "AWS::EC2::Volume"
+  
+  MyEC2Instance:
+    Type: AWS::EC2::Instance
     Properties:
-      AvailabilityZone: !GetAtt KenNginexCFInstance.AvailabilityZone
-      Size: 2
+      KeyName: leon
+      SecurityGroupIds:
+        - !Ref WebServerSecurityGroup
       Tags:
         - Key: Name
-          Value: SSD
-      VolumeType: gp2
-
-  MountPoint:
-    Type: AWS::EC2::VolumeAttachment
-    Properties:
-      InstanceId: !Ref KenNginexCFInstance
-      VolumeId: !Ref SSD2GB
-      Device: /dev/sdf
+          Value: Nginex-EC2
+      LaunchTemplate:
+        LaunchTemplateId: !Ref NginexCFTemplate
+        Version: !GetAtt NginexCFTemplate.LatestVersionNumber    
 
   NginexCFTemplate:
     Type: "AWS::EC2::LaunchTemplate"
@@ -68,35 +65,42 @@ Resources:
               mkfs -t ext4 /dev/xvdf
               mkdir /mnt/2nd-vol/
               echo "/dev/xvdf       /mnt/2nd-vol   ext4    defaults,nofail 0       2" >> /etc/fstab
-              mount -a
-
-  KenNginexCFInstance:
-    Type: AWS::EC2::Instance
+              mount -a  
+  
+  SSD2GB:
+    Type: "AWS::EC2::Volume"
     Properties:
-      KeyName: baris
-      SecurityGroupIds:
-        - !Ref WebServerSecurityGroup
+      AvailabilityZone: !GetAtt MyEC2Instance.AvailabilityZone
+      Size: 2
       Tags:
         - Key: Name
-          Value: Nginex-EC2
-      LaunchTemplate:
-        LaunchTemplateId: !Ref NginexCFTemplate
-        Version: !GetAtt NginexCFTemplate.LatestVersionNumber             
+          Value: SSD
+      VolumeType: gp2
+
+  MountPoint:
+    Type: AWS::EC2::VolumeAttachment
+    Properties:
+      InstanceId: !Ref MyEC2Instance
+      VolumeId: !Ref SSD2GB
+      Device: /dev/sdf
+
 
 Outputs:
   InstanceId:
     Description: InstanceId of the first EC2 instance
-    Value: !Ref KenNginexCFInstance
+    Value: !Ref MyEC2Instance
+
   PublicDNS:
     Description: Public DNS Name of the EC2 instance
     Value: !Join 
       - "://"
       - - "http"
         - !GetAtt 
-          - KenNginexCFInstance
+          - MyEC2Instance
           - PublicDnsName
+
   PublicIP:
     Description: Public IP address of the EC2 instance
     Value: !GetAtt 
-      - KenNginexCFInstance
+      - MyEC2Instance
       - PublicIp
